[metadata]
name = neurox
version = 1.0.9
author = Fahim Dalvi
author_email = faimaduddin@hbku.edu.qa
description = Toolkit for Neuron Analysis in Deep NLP Models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fdalvi/NeuroX
project_urls =
    Documentation = https://neurox.qcri.org/docs/
    Bug Tracker = https://github.com/fdalvi/NeuroX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = 
    =.
install_requires =
    h5py==3.1.0
    imbalanced-learn==0.8
    matplotlib==3.3.4
    numpy==1.19.5
    scikit-learn==0.24.2
    scipy==1.5.4
    seaborn==0.11.1
    svgwrite==1.4.1
    tokenizers==0.10.3
    torch==1.8.1
    tqdm==4.61.0
    transformers==4.6.1
python_requires = >=3.6

[options.extras_require]
dev =
    build==0.7.0
    pytest==7.0.1
    pytest-cov==3.0.0
    sphinx==4.4.0
    sphinx-book-theme==0.2.0
    ufmt==1.3.2

[options.packages.find]
where = .
exclude = tests*

[tool:pytest]
testpaths =
    "tests"